--- a/src/Praetor.AppHost/appsettings.Development.json
+++ b/src/Praetor.AppHost/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Acs": {
+    "Conn": "<connection-string>",
+    "From": "noreply@example.com"
   }
 }
