--- a/src/Praetor.Contracts/Praetor.Contracts.csproj
+++ b/src/Praetor.Contracts/Praetor.Contracts.csproj
@@ -1,9 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Praetor.Core\Praetor.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Orleans.Core.Abstractions" Version="9.1.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Praetor.Contracts</RootNamespace>
   </PropertyGroup>
 
 </Project>
