--- a/src/Praetor.Rules/Praetor.Rules.csproj
+++ b/src/Praetor.Rules/Praetor.Rules.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Praetor.Rules</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
