--- a/src/Praetor.Ui.ConflictsTeam/Praetor.Ui.ConflictsTeam.csproj
+++ b/src/Praetor.Ui.ConflictsTeam/Praetor.Ui.ConflictsTeam.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <RootNamespace>Praetor.Ui.ConflictsTeam</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
