--- a/tests/Praetor.UnitTests/Praetor.UnitTests.csproj
+++ b/tests/Praetor.UnitTests/Praetor.UnitTests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <RootNamespace>Praetor.UnitTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +18,10 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Praetor.Core\Praetor.Core.csproj" />
   </ItemGroup>
 
 </Project>
